# flake8-pyprojecttoml

./: .gitignore  .gitlab-ci.yml  CHANGES.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.gitlab/issue_templates/: bug.md
src/flake8_pyprojecttoml/: __init__.py
tests/: test_flake_pyprojecttoml.py
