[metadata]
name = flake8-pyprojecttoml
version = 0.0.1
author = Marko Durkovic
author_email = marko@miding.de
home_page = https://gitlab.com/durko/flake8-pyprojecttoml
description = Inject pyproject.toml support into flake8.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    configuration
    flake8
    pyproject.toml
license = Apache 2.0
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Quality Assurance
    Typing :: Typed
project_urls =
  Code = https://gitlab.com/durko/flake8-pyprojecttoml
  Documentation = https://durko.gitlab.io/flake8-pyprojecttoml
  Issue tracker = https://gitlab.com/durko/flake8-pyprojecttoml/issues

[options]
include_package_data = true
package_dir =
    = src
packages = find_namespace:
zip_safe = false
python_requires =
    >=3.8.2
setup_requires =
    setuptools >=40.8.0
    wheel
install_requires =
    flake8
    tomli;python_version<'3.11'

[options.entry_points]
flake8.report = 
    flake8_pyprojecttoml_dummy = flake8_pyprojecttoml:Dummy

[options.extras_require]
dev =
    darglint
    flake8
    flake8-annotations
    flake8-bugbear
    flake8-commas
    flake8-comprehensions
    flake8-docstrings
    flake8-fixme
    flake8-isort
    flake8-mutable
    flake8-print
    flake8-pytest-style
    flake8-quotes
    flake8-return
    flake8-simplify
    flake8-type-checking
    flake8-use-fstring
    pep8-naming
    pytest
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest-pylint
    pytest-yapf3
    yapf

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[sdist]
formats = gztar, zip
